<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/exploreFragment"
        android:icon="@drawable/ic_explore_black"
        android:title="@string/explore_text" />
    <item
        android:id="@+id/mylistFragment"
        android:icon="@drawable/ic_list_black"
        android:title="@string/mylist_text" />
    <item
        android:id="@+id/myRecipesFragment"
        android:icon="@drawable/ic_android_black"
        android:title="@string/myrecipes_text" />
    <item
        android:id="@+id/createRecipeFragment"
        android:icon="@drawable/ic_add_circle_black"
        android:title="@string/create_recipe_text" />
    <item
        android:id="@+id/welcomeFragment"
        android:icon="@drawable/ic_clear_black"
        android:title="@string/getout_text" />
</menu>